projects/los-retail/master/k8s-config/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: master
  name: master
  namespace: los-retail-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: master
  template:
    metadata:
      labels:
        app: master
    spec:
      containers:
        - image: registry.coherent.in/master-management-los:24
          resources:
            requests:
              cpu: "100m"
              memory: "1500Mi"
            limits:
              cpu: "2000m"
              memory: "4096Mi"
          imagePullPolicy: Always
          name: master
          # startupProbe:
          #   httpGet:
          #     path: /actuator/health
          #     port: 7013
          #   failureThreshold: 30
          #   periodSeconds: 10
      imagePullSecrets:
        - name: registry-regcred
