projects/los-retail/master/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: master
  name: master-svc
  namespace: los-retail-dev
spec:
  ports:
    - port: 6013
      protocol: TCP
      targetPort: 6013
  selector:
    app: master
